--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -2,14 +2,13 @@
 
 <h1>Characters</h1>
 
-<table>
+<table class:'table align-middle'>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Character class</th>
-      <th>Level</th>
-      <th>Description</th>
-      <th colspan="3"></th>
+      <th scope="col">Name</th>
+      <th scope="col">Character class</th>
+      <th scope="col">Level</th>
+      <th scope="col">Description</th>
     </tr>
   </thead>
 
@@ -20,9 +19,9 @@
         <td><%= character.character_class %></td>
         <td><%= character.level %></td>
         <td><%= character.description %></td>
-        <td><%= link_to 'Show', character %></td>
-        <td><%= link_to 'Edit', edit_character_path(character) %></td>
-        <td><%= link_to 'Destroy', character, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= button_to 'Show', character, class: 'btn btn-primary' %></td>
+        <td><%= button_to 'Edit', edit_character_path(character), class: 'btn btn-info' %></td>
+        <td><%= button_to 'Destroy', character, class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
