--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CS3300Project</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "Character References" %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Online Respository for your TTRPG characters" %>">
+    
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,6 +13,11 @@
   </head>
 
   <body>
-    <%= yield %>
+  <header>
+    <%= render 'layouts/navigation' %>
+  </header>
+  <main role="main">
+    <%= content_for?(:content) ? yield(:content) : yield %>
+  </main>
   </body>
 </html>
