--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,32 +1,27 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Characters</h1>
-
-<table class:'table align-middle'>
-  <thead>
-    <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Character class</th>
-      <th scope="col">Level</th>
-      <th scope="col">Description</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @characters.each do |character| %>
-      <tr>
-        <td><%= character.name %></td>
-        <td><%= character.character_class %></td>
-        <td><%= character.level %></td>
-        <td><%= character.description %></td>
-        <td><%= button_to 'Show', character, class: 'btn btn-primary' %></td>
-        <td><%= button_to 'Edit', edit_character_path(character), class: 'btn btn-info' %></td>
-        <td><%= button_to 'Destroy', character, class: 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="container-fluid">
+  <h1 class= "text-center">Characters</h1>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+  <% @characters.each do |character| %>
+    <div class="col">
+      <div class="card border-primary"> 
+        <div class="card-header text-white bg-primary"> 
+          <h5 class="m-0"><%= character.name%></h5>
+        </div>
+          <div class= "card-body">
+            <h5 class="card-title">Level <%= character.level%> <%= character.character_class %> </h5>
+            <div class = "d-flex flex-row justify-content-evenly">  
+              <div class = "p-2"><%= link_to 'See More', character, class: 'btn btn-primary', style: "color:white" %></div>
+              <div class = "p-2"><%= link_to 'Edit', edit_character_path(character), class: 'btn btn-info', style: "color:white" %></div>
+              <div class = "p-2"><%= link_to 'Destroy', character, class: 'btn btn-danger', style: "color:white", method: :delete, data: { confirm: 'Are you sure?' } %></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <% end %>
+    </div>
+</div>
 
 <br>
-
-<%= link_to 'New Character', new_character_path %>
+<div class="d-flex justify-content-center">
+  <%= link_to 'New Character', new_character_path, class: 'btn btn-primary', style: "color:white" %>
+</div>
