--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Character</h1>
+<div class="d-flex flex-row justify-content-center">
+    <div class="h1">Editing Character</div>
+</div>
 
-<%= render 'form', character: @character %>
+<div class="container-fluid">
+    <%= render 'form', character: @character %>
+</div>
 
-<%= link_to 'Show', @character %> |
-<%= link_to 'Back', characters_path %>
+<div class="d-flex flex-row justify-content-evenly">
+    <%= link_to 'See Character', @character, class: "btn btn-primary", style: "color:white" %>
+    <%= link_to 'Back to Character List', characters_path, class:"btn btn-secondary", style: "color:white" %>
+</div>
