--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -5,14 +5,14 @@
     <div class="col">
       <div class="card border-primary"> 
         <div class="card-header text-white bg-primary"> 
-          <h5 class="m-0"><%= character.name%></h5>
+          <h5 class="m-0 text-center"><%= character.name%></h5>
         </div>
           <div class= "card-body">
-            <h5 class="card-title">Level <%= character.level%> <%= character.character_class %> </h5>
+            <h5 class="card-title text-center text-capitalize">Level <%= character.level%> <%= character.character_class %> </h5>
             <div class = "d-flex flex-row justify-content-evenly">  
               <div class = "p-2"><%= link_to 'See More', character, class: 'btn btn-primary', style: "color:white" %></div>
-              <div class = "p-2"><%= link_to 'Edit', edit_character_path(character), class: 'btn btn-info', style: "color:white" %></div>
-              <div class = "p-2"><%= link_to 'Destroy', character, class: 'btn btn-danger', style: "color:white", method: :delete, data: { confirm: 'Are you sure?' } %></div>
+              <div class = "p-2"><%= link_to 'Edit this Character', edit_character_path(character), class: 'btn btn-info', style: "color:white" %></div>
+              <div class = "p-2"><%= link_to 'Delete this Character', character, class: 'btn btn-danger', style: "color:white", method: :delete, data: { confirm: 'Are you sure?' } %></div>
             </div>
           </div>
         </div>
@@ -23,5 +23,5 @@
 
 <br>
 <div class="d-flex justify-content-center">
-  <%= link_to 'New Character', new_character_path, class: 'btn btn-primary', style: "color:white" %>
+  <%= link_to 'New Character', new_character_path, class: 'btn btn-warning', style: "color:white" %>
 </div>
