--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Character</h1>
+<div class="d-flex flex-row justify-content-center">
+    <div class="h1">New Character</div>
+</div>
 
-<%= render 'form', character: @character %>
+<div class="container-fluid">
+    <%= render 'form', character: @character %>
+</div>
 
-<%= link_to 'Back', characters_path %>
+<div class="d-flex flex-row justify-content-evenly">
+    <%= link_to 'Back to Character List', characters_path, class:"btn btn-secondary", style: "color:white" %>
+</div>
