--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -8,21 +8,21 @@
   </div>
 
   <div class= "d-flex flex-row justify-content-evenly border border-primary border-2 rounded-bottom">
-    <div class= "p-2">
-      <strong>Character class:</strong>
+    <div class= "p-2 fs-4 text-capitalize">
+      <strong>Character Class:</strong>
       <%= @character.character_class %>
     </div>
 
-    <div class="p-2">
+    <div class="p-2 fs-4">
       <strong>Level:</strong>
       <%= @character.level %>
     </div>
   </div>
 
   <div class="d-flex flex-row justify-content-center text-light bg-dark bg-gradient rounded-top">
-    <div class= "h3 text-center"><strong>Description</strong></div>
+    <div class= "h3 text-center text-uppercase fs-2"><strong>Description</strong></div>
   </div>
-  <div class="d-flex flex-row justify-content-evenly bg-light bg-gradient border border-2 rounded-bottom"
+  <div class="d-flex flex-row justify-content-evenly bg-light bg-gradient border border-2 rounded-bottom">
     <div class= "p-2 text-wrap fs-4">
       <%= @character.description %>
     </div>
@@ -30,6 +30,6 @@
 </div>
 <br>
 <div class="d-flex flex-row justify-content-evenly">
-<%= link_to 'Edit', edit_character_path(@character), class: 'btn btn-info', style: "color:white" %>
-<%= link_to 'Back', characters_path, class: 'btn btn-secondary', style: "color:white" %>
+  <%= link_to 'Edit this character', edit_character_path(@character), class: 'btn btn-info', style: "color:white" %>
+  <%= link_to 'Back to Character List', characters_path, class: 'btn btn-secondary', style: "color:white" %>
 </div>
