--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,8 +1,8 @@
-<div class="d-flex flex-row justify-content-center">
+<div class="d-flex flex-row text-white justify-content-center bg-primary">
     <div class="h1">Editing Character</div>
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid border border-2 border-primary rounded-bottom p-1 mb-1">
     <%= render 'form', character: @character %>
 </div>
 
