--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -11,8 +11,10 @@
             <h5 class="card-title text-center text-capitalize">Level <%= character.level%> <%= character.character_class %> </h5>
             <div class = "d-flex flex-row justify-content-evenly">  
               <div class = "p-2"><%= link_to 'See More', character, class: 'btn btn-primary', style: "color:white" %></div>
+              <% if user_signed_in? %>
               <div class = "p-2"><%= link_to 'Edit this Character', edit_character_path(character), class: 'btn btn-info', style: "color:white" %></div>
               <div class = "p-2"><%= link_to 'Delete this Character', character, class: 'btn btn-danger', style: "color:white", method: :delete, data: { confirm: 'Are you sure?' } %></div>
+              <% end %>
             </div>
           </div>
         </div>
@@ -22,6 +24,8 @@
 </div>
 
 <br>
+<% if user_signed_in? %>
 <div class="d-flex justify-content-center">
   <%= link_to 'New Character', new_character_path, class: 'btn btn-warning', style: "color:white" %>
 </div>
+<% end %>
