--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,6 +9,21 @@
         <li class="nav-item">
           <%= link_to 'Characters', characters_path, class: 'nav-link active' %>
         </li>
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Account
+        </a>
+        <ul class="dropdown-menu">
+          <% if user_signed_in? %>
+            <li><%= link_to 'Edit Profile', edit_user_registration_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Sign In', destroy_user_session_path, class: 'dropdown-item' %></li>
+          <% else %>
+            <li><%= link_to 'Sign Up', new_user_registration_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Login', new_user_session_path, class: 'dropdown-item' %></li>
+          <% end %>
+        </ul>
+      </li>
+
       </ul>
     </div>
   </div>
