--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,10 +16,10 @@
         <ul class="dropdown-menu">
           <% if user_signed_in? %>
             <li><%= link_to 'Edit Profile', edit_user_registration_path, class: 'dropdown-item' %></li>
-            <li><%= link_to 'Sign In', destroy_user_session_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'dropdown-item' %></li>
           <% else %>
             <li><%= link_to 'Sign Up', new_user_registration_path, class: 'dropdown-item' %></li>
-            <li><%= link_to 'Login', new_user_session_path, class: 'dropdown-item' %></li>
+            <li><%= link_to 'Sign In', new_user_session_path, class: 'dropdown-item' %></li>
           <% end %>
         </ul>
       </li>
